--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.example</groupId>
             <artifactId>spi_provider</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
